Fixed: Added the homepage picture into the project. Fixed: Added in my homepage table an id column because the key didn’t work otherwise to display what I want from the dragons table. Fixed: fetchHomepage.php: alike in the fetchAll.php I wanted to fetch all from the homepage table and order it by id. In the data statement I took in the file fetchAll.  Fixed: homepage.js: I took in the stats that I had from my homepage table: id, Description, Purpose, Goal, ThankYouWords and Sources and took it inside the class HomepageStats. I fetched from the fetchHomepage.php file everything from the homepage table, and like always did a componentDidMount on it. In render I created something similar like I did on dragons but changed so it will be h3 tags with a className called homepage title. When I didnt have a specific key with id the console complained that is why I added a column of id in my database under homepage table. After that I added some classNames both homepage stats wrapper, dragonology, which holds the homepage picture image with an alt meaning if the image arent showing it will say the text homepage picture, before the h3 tags it will be an h1 with the className homepage title dragonology, also a h2 tags className called what dragon, with another title What type of dragon are you as a question, and homestats container which contain the let variable homestats with all the data from the database itself.  Fixed: _mobile.scss: changed the homestats container to be inline block, align items in the center, all the text to the left, the width and height, change the font size on the className:  what dragon, homepage title, homepage title dragonology, one of the classNames had two 100 procent width so took on of them away, also noticed that I had forgot an dot on one of the classNames think it was dragon links wrapper. Fixed: _tablet.scss: I had to go trough all the classNames and scan it for the error why it were so much space on the top in both the dragon pages and in th

--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -13,8 +13,16 @@
 
 }
 
+.homepage--stats--wrapper{
+    
+     height: 100%;
+    width: 100%;
+     margin: 0;
+    padding: 0;
+}
 
-dragons--facts--container{
+
+.dragons--facts--container{
         height: 100%;
     width: 100%;
      margin: 0;
@@ -98,7 +106,6 @@ dragons--facts--container{
 
 .dragon--links--container{
          height: 1900px;
-    width: 100%;
     width: 100%;
     margin: 0;
     padding: 0;  
@@ -232,38 +239,6 @@ dragons--facts--container{
 }
 
 
-.select-box--arrow {
-    width: 93px;
-    height: 60px;
-    padding: 4px 12px 0px 0px;
-    display: inline-block;
-    position: absolute;
-     top: 15px;
-    margin: 0;
-    left: 93px;
-}
-
-.select-box--arrow-down {
-    position: absolute;
-    top: 12px;
-    left: 8px;
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-top: 10px;
-}
-
-.select-box--arrow-up {
-    position: absolute;
-    top: 10px;
-    left: 8px;
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-bottom: 10px;
-}
 
 .title{
     color:#5facff;
@@ -331,11 +306,52 @@ nav{
 }
 
 .dragonhead img{
-      display: flex;
+    display: flex;
     width: 260px;
     height: 205px;
     align-items: center;
     background-repeat: no-repeat; 
     background-size: cover;
     padding: 0;
+}
+
+.dragonology{
+    display: flex;
+    display:inline-block;
+    align-items: center;
+    padding-top: 50px;
+}
+
+.dragonology img{
+    width: 257px;
+    height: 162px;
+    background-repeat: no-repeat; 
+    background-size: cover;
+ 
+}
+
+
+.homestats--container{
+    display:inline-block;
+    align-items: center;
+    text-align: left;
+    width: 257px;
+    height: 300px;
+        
+}
+
+.homepage--title--dragonology{
+    
+      font-size: 30px;
+    
+}
+
+.homepage--title{
+    
+      font-size: 18px;
+    
+}
+
+.what--dragon{
+     font-size: 20px;
 }
