--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -33,7 +33,8 @@
 
 .nav--wrapper{
     min-width: 768px;
-    min-height: 1024px;
+   min-height: 170px;
+    
     
 }
 
@@ -194,3 +195,72 @@ nav img {
 
       
 }
+
+
+/* Homepage */
+
+.homepage--stats--wrapper{
+    display: inline-block;
+    margin: 0;
+   
+ 
+}
+
+.homestats--container{
+    overflow-y: scroll;
+    width: 75%;
+    height: 600px;
+    width: 600px;
+    margin: 0;
+    padding: 0;
+        
+}
+
+.mainmenu--container{
+    height: 500px;
+   
+    
+    
+}
+
+.homepage--wrapper{
+   
+     margin: 0;
+    padding: 0;
+
+}
+
+
+
+
+
+/* Scrollbar*/
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: aqua; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+
+
+/* testing */
+
+
+
+
